# Remander

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  spec.md  todo.md
docs/: authentication.md  configuration.md  plugin-architecture.md
migrations/models/: 0_20260303211425_init.py  0_20260305111935_init.py  10_20260312164648_hex_colors.py  11_20260313192440_ingress_egress_mute.py  12_20260313212739_ptz_calibration_required.py  1_20260309000000_add_device_zone_mask_fields.py  3_20260309203345_add_dashboard_buttons.py  (+7 more)
plugins/remander-hot-water/: pyproject.toml
plugins/remander-hot-water/src/remander_hot_water/: __init__.py  jobs.py  plugin.py  routes.py  service.py  settings.py
plugins/remander-hot-water/src/remander_hot_water/templates/hot_water/: _dashboard_widget.html  _guest_widget.html  _status_partial.html
plugins/remander-hot-water/tests/: conftest.py  test_routes.py  test_service.py
scripts/: export-session.sh  list-transcripts.sh  transcript-to-markdown.py
tests/: conftest.py  test_activity_service.py  test_app_colors.py  test_app_config.py  test_auth.py  test_bitmask_service.py  test_bulk_tag_service.py  test_command_queue.py  test_command_service.py  test_dashboard_button_bitmask_rules.py  test_dashboard_button_mute.py  test_dashboard_button_service.py  test_detection_service.py  test_device_service.py  test_guest_dashboard.py  test_health.py  test_logging.py  test_notification.py  test_nvr_sync_service.py  test_plugin_base.py  test_plugin_data.py  test_plugin_registry.py  test_queue.py  test_reolink_client.py  test_routes_activity.py  test_routes_admin.py  test_routes_admin_settings.py  test_routes_auth.py  test_routes_bitmasks.py  test_routes_command_history.py  test_routes_commands.py  test_routes_dashboard.py  test_routes_dashboard_buttons.py  test_routes_data.py  test_routes_devices.py  test_routes_setup.py  test_routes_tags.py  test_routes_users.py  test_saq_worker.py  test_scheduling.py  (+13 more)
(+138 files in other folders)
